--- a/PortableWidget/Pages/CpuPage.xaml
+++ b/PortableWidget/Pages/CpuPage.xaml
@@ -1,14 +1,66 @@
-﻿<Page x:Class="PortableWidget.Pages.Cpu_page"
+﻿<Page x:Class="PortableWidget.Pages.CpuPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PortableWidget.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="Cpu_page">
+      d:DesignHeight="400" d:DesignWidth="600"
+      Title="CpuPage">
 
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" Grid.ColumnSpan="3" Margin="10" Background="White" Padding="150,100">
+            here is the plot of usage irl is measured in percent
+        </Label>
+        <Button Grid.Column="2" Grid.Row="1" Width="65" Height="30" Margin="10" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+            Update
+        </Button>
+        <StackPanel Grid.Column="0" Grid.Row="1" Margin="5" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="130">
+            <TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Id
+            </TextBlock>
+            <TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             User Persentage
+            </TextBlock>
+            <!--<TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Temperature
+            </TextBlock>-->
+            <TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Speed
+            </TextBlock>
+            <TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Count of Processes
+            </TextBlock>
+            <TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Count of Speed
+            </TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="1" Margin="5" VerticalAlignment="Bottom" HorizontalAlignment="Center">
+            <TextBlock Height="20" Width="30" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                100
+            </TextBlock>
+            <TextBlock Height="20" Width="30" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                100
+            </TextBlock>
+            <TextBlock Height="20" Width="30" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                100
+            </TextBlock>
+            <TextBlock Height="20" Width="30" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                100
+            </TextBlock>
+            <TextBlock Height="20" Width="30" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                100
+            </TextBlock>
+        </StackPanel>
+            
     </Grid>
 </Page>
