--- a/PortableWidget/MainWindow.xaml
+++ b/PortableWidget/MainWindow.xaml
@@ -51,8 +51,14 @@
                     </TabItem>
                 </TabControl>
             </TabItem>
-            <TabItem x:Name="Recomendatios" Header="Recomendations">
+            <TabItem x:Name="Recomendations" Header="Recomendations">
                 
+            </TabItem>
+            <TabItem x:Name="FileUnlocker" Header="File Unlocker">
+                <TabItem.Content>
+                    <Frame Source="Pages/FileUnlockerPage.xaml" Margin="3" Background="White"
+                            BorderBrush="White" BorderThickness="2"></Frame>
+                </TabItem.Content>
             </TabItem>
             <TabItem x:Name="Authors" Header="Authors">
 
