--- a/PortableWidget/Pages/EthernetPage.xaml
+++ b/PortableWidget/Pages/EthernetPage.xaml
@@ -8,7 +8,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="400" d:DesignWidth="600"
       Title="EthernetPage">
-    <Grid>
+    <Grid x:Name="ContentRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
