--- a/PortableWidget/Pages/RamPage.xaml
+++ b/PortableWidget/Pages/RamPage.xaml
@@ -55,21 +55,21 @@
              Memory Cached
             </TextBlock>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
-                100
+        <StackPanel Grid.Column="1" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="150">
+            <TextBlock Height="20" Width="150"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding RamSpeed}">
-                100
+            <TextBlock Height="20" Width="150"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding RamSpeed}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryInUse}">
-                100
+            <TextBlock Height="20" Width="150"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryInUse}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryCommited}">
-                100
+            <TextBlock Height="20" Width="150"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryCommited}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryCached}">
-                100
+            <TextBlock Height="20" Width="150"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryCached}">
+                
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="2" Grid.Row="1" Margin="5" VerticalAlignment="Top" HorizontalAlignment="Left" Width="130">
@@ -82,16 +82,22 @@
             <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
              Non-paged Pool
             </TextBlock>
+            <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+             Capacity
+            </TextBlock>
         </StackPanel>
-        <StackPanel Grid.Column="3" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding SlotsUsed}">
-                100
+        <StackPanel Grid.Column="3" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="80">
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding SlotsUsed}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding PagedPool}">
-                100
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding PagedPool}">
+                
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding NonPagedPool}">
-                100
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding NonPagedPool}">
+                
+            </TextBlock>
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Capacity}">
+
             </TextBlock>
         </StackPanel>
     </Grid>
