--- a/PortableWidget/Pages/DiskPage.xaml
+++ b/PortableWidget/Pages/DiskPage.xaml
@@ -30,24 +30,30 @@
                 <lvc:Axis Title="Time (60 sec)" Labels="{Binding Labels}"></lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
-        <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="5" Margin="10" LegendLocation="Right" >
+        <!--<lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="5" Margin="10" LegendLocation="Right" AnimationsSpeed="0:0:0.5" Hoverable="True" DataTooltip="{x:Null}">
             <lvc:CartesianChart.Series>
-                <lvc:LineSeries Title="Read Speed" Values="{Binding ReadSpeed}" StrokeThickness="4" StrokeDashArray="2" 
+                <lvc:LineSeries Title="Read Speed" Values="{Binding ReadValues}" StrokeThickness="4" StrokeDashArray="2" 
                        Stroke="#6BBA45" Fill="Transparent" LineSmoothness="0" PointGeometry="{x:Null}" />
-                <lvc:LineSeries Title="Write Speed" Values="{Binding WriteSpeed}" StrokeThickness="2" 
+                <lvc:LineSeries Title="Write Speed" Values="{Binding WriteValues}" StrokeThickness="2" 
                        Stroke="#6BBA45" Fill="Transparent" LineSmoothness="1" 
                        PointGeometrySize="15" />
             </lvc:CartesianChart.Series>
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Active Time" LabelFormatter="{Binding YFormatter_2}"></lvc:Axis>
+                <lvc:Axis Title="Active Time" MaxValue="20" MinValue="0"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Time (60 sec)" Labels="{Binding Labels_2}"></lvc:Axis>
+            <lvc:CartesianChart.AxisX >
+                <lvc:Axis LabelFormatter="{Binding DateTimeFormatter}" 
+                          MaxValue="{Binding AxisMax}" 
+                          MinValue="{Binding AxisMin}"
+                          Unit="{Binding AxisUnit}"
+                           Title="Current Time">
+                    <lvc:Axis.Separator>
+                        <lvc:Separator Step="{Binding AxisStep}" />
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
             </lvc:CartesianChart.AxisX>
-        </lvc:CartesianChart>
-        <!--<Label Grid.Row="0" Grid.ColumnSpan="3" Margin="10" Background="White" Padding="150,100">
-            here is the plot of usage irl is measured in percent
-        </Label>-->
+        </lvc:CartesianChart>-->
+       
         <Button Grid.Column="4" Grid.Row="2" Width="65" Height="30" Margin="10" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             Update
         </Button>
