--- a/PortableWidget/Pages/DiskPage.xaml
+++ b/PortableWidget/Pages/DiskPage.xaml
@@ -22,24 +22,18 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <lvc:CartesianChart Grid.Row="0" Grid.ColumnSpan="5" Margin="10" Series="{Binding SeriesCollection}" LegendLocation="Right" >
-            <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Active Time" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
-            </lvc:CartesianChart.AxisY>
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Time (60 sec)" Labels="{Binding Labels}"></lvc:Axis>
-            </lvc:CartesianChart.AxisX>
-        </lvc:CartesianChart>
-        <!--<lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="5" Margin="10" LegendLocation="Right" AnimationsSpeed="0:0:0.5" Hoverable="True" DataTooltip="{x:Null}">
+        <lvc:CartesianChart Grid.Row="0" Grid.ColumnSpan="5" Margin="10" AnimationsSpeed="0:0:0.5" Hoverable="True" DataTooltip="{x:Null}">
             <lvc:CartesianChart.Series>
-                <lvc:LineSeries Title="Read Speed" Values="{Binding ReadValues}" StrokeThickness="4" StrokeDashArray="2" 
-                       Stroke="#6BBA45" Fill="Transparent" LineSmoothness="0" PointGeometry="{x:Null}" />
-                <lvc:LineSeries Title="Write Speed" Values="{Binding WriteValues}" StrokeThickness="2" 
-                       Stroke="#6BBA45" Fill="Transparent" LineSmoothness="1" 
-                       PointGeometrySize="15" />
+                <lvc:LineSeries Values="{Binding DiskChartValues}" 
+                                PointGeometrySize="15" 
+                                PointForeground="White"
+                                LineSmoothness="1"
+                                StrokeThickness="3" 
+                                Stroke="DodgerBlue"
+                                Fill="Transparent"/>
             </lvc:CartesianChart.Series>
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Active Time" MaxValue="20" MinValue="0"></lvc:Axis>
+                <lvc:Axis Title="Using %" MaxValue="100" MinValue="0"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
             <lvc:CartesianChart.AxisX >
                 <lvc:Axis LabelFormatter="{Binding DateTimeFormatter}" 
@@ -52,7 +46,30 @@
                     </lvc:Axis.Separator>
                 </lvc:Axis>
             </lvc:CartesianChart.AxisX>
-        </lvc:CartesianChart>-->
+        </lvc:CartesianChart>
+        <lvc:CartesianChart Grid.Row="1" Grid.ColumnSpan="5" Margin="10" LegendLocation="Right" AnimationsSpeed="0:0:0.5" Hoverable="True" DataTooltip="{x:Null}">
+            <lvc:CartesianChart.Series>
+                <lvc:LineSeries Title="Read Speed" Values="{Binding ReadValues}" StrokeThickness="4" StrokeDashArray="2" 
+                       Stroke="#6BBA45" Fill="Transparent" LineSmoothness="0" PointGeometry="{x:Null}" />
+                <lvc:LineSeries Title="Write Speed" Values="{Binding WriteValues}" StrokeThickness="2" 
+                       Stroke="#6BBA45" Fill="Transparent" LineSmoothness="1" 
+                       PointGeometrySize="15" />
+            </lvc:CartesianChart.Series>
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis Title="Active Time" MaxValue="300" MinValue="0"></lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+            <lvc:CartesianChart.AxisX >
+                <lvc:Axis LabelFormatter="{Binding DateTimeFormatter}" 
+                          MaxValue="{Binding AxisMax}" 
+                          MinValue="{Binding AxisMin}"
+                          Unit="{Binding AxisUnit}"
+                           Title="Current Time">
+                    <lvc:Axis.Separator>
+                        <lvc:Separator Step="{Binding AxisStep}" />
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
        
         <Button Grid.Column="4" Grid.Row="2" Width="65" Height="30" Margin="10" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             Update
@@ -78,19 +95,19 @@
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="2" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
+            <TextBlock Height="20" Width="120"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding ReadSpeed}">
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding ReadSpeed}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding WriteSpeed}">
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding WriteSpeed}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding AverageResponseTime}">
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding AverageResponseTime}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Capacity}">
+            <TextBlock Height="20" Width="70"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Capacity}">
                 
             </TextBlock>
         </StackPanel>
