--- a/PortableWidget/Pages/GpuPage.xaml
+++ b/PortableWidget/Pages/GpuPage.xaml
@@ -39,7 +39,7 @@
              Id
             </TextBlock>
             <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-             Gpu Type
+             Gpu Driver Version
             </TextBlock>
             <!--<TextBlock Height="20" Width="110" Background="White" TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
              Temperature
@@ -48,44 +48,38 @@
              Temperature
             </TextBlock>
             <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-             Speed
+             Adapter Ram
             </TextBlock>
             <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
              Memory Usage
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
+            <TextBlock Height="20" Width="100"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Id}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding GpuType}">
+            <TextBlock Height="20" Width="100"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding GpuDriverVersion}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Temperature}">
+            <TextBlock Height="20" Width="100"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Temperature}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding Speed}">
+            <TextBlock Height="20" Width="100"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding AdapterRam}">
                 
             </TextBlock>
-            <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryUsage}">
+            <TextBlock Height="20" Width="100"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding MemoryUsage}">
                 
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="2" Grid.Row="1" Margin="5" VerticalAlignment="Top" HorizontalAlignment="Left" Width="130">
-            <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-             Count Of Threads
-            </TextBlock>
+            
             <TextBlock Height="20" Width="110"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom">
              Fan Duty Percentage
             </TextBlock>
 
         </StackPanel>
         <StackPanel Grid.Column="3" Grid.Row="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <TextBlock  Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding CountOfThreads}">
-                
-            </TextBlock>
             <TextBlock Height="20" Width="30"  TextAlignment="Center" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="{Binding FanDutyPercentage}">
-                
             </TextBlock>
         </StackPanel>
     </Grid>
