--- a/PortableWidget/Pages/GpuPage.xaml
+++ b/PortableWidget/Pages/GpuPage.xaml
@@ -20,12 +20,29 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <lvc:CartesianChart Grid.Row="0" Grid.ColumnSpan="5" Margin="10" Series="{Binding SeriesCollection}" LegendLocation="Right" >
+        <lvc:CartesianChart Grid.Row="0" Grid.ColumnSpan="5" Margin="10" AnimationsSpeed="0:0:0.5" Hoverable="True" DataTooltip="{x:Null}">
+            <lvc:CartesianChart.Series>
+                <lvc:LineSeries Values="{Binding ChartValuesGpu}" 
+                                PointGeometrySize="15" 
+                                PointForeground="White"
+                                LineSmoothness="1"
+                                StrokeThickness="3" 
+                                Stroke="DodgerBlue"
+                                Fill="Transparent"/>
+            </lvc:CartesianChart.Series>
             <lvc:CartesianChart.AxisY>
-                <lvc:Axis Title="Capacity" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                <lvc:Axis Title="Using memory" MaxValue="100" MinValue="0"></lvc:Axis>
             </lvc:CartesianChart.AxisY>
-            <lvc:CartesianChart.AxisX>
-                <lvc:Axis Title="Time (60 sec)" Labels="{Binding Labels}"></lvc:Axis>
+            <lvc:CartesianChart.AxisX >
+                <lvc:Axis LabelFormatter="{Binding DateTimeFormatter}" 
+                          MaxValue="{Binding AxisMax}" 
+                          MinValue="{Binding AxisMin}"
+                          Unit="{Binding AxisUnit}"
+                           Title="Current Time">
+                    <lvc:Axis.Separator>
+                        <lvc:Separator Step="{Binding AxisStep}" />
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
             </lvc:CartesianChart.AxisX>
         </lvc:CartesianChart>
         <!--<Label Grid.Row="0" Grid.ColumnSpan="3" Margin="10" Background="White" Padding="150,100">
